--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,18 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/database
-spring.datasource.username=12345
-spring.datasource.password=12346
-
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-
-server.port=8099
+jwt:
+  secret: 984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723gf
+  lifetime: 30m
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: s367911
+    password: VA2515SVYu1DvXR1
+  jpa:
+    show-sql: true
+    database: POSTGRESQL
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
+server:
+  port: 8099
